[package]
name = "tc-icp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10.14", features = [], default-features = false }
ic-cdk = { version = "0.17.2", features = [], default-features = false }
ic-stable-structures = { version = "0.6.8", features = [], default-features = false }
serde = { version = "1.0.219", features = [], default-features = false }
